# ProtoAi_PEUP

./: CONCEPTS.md  README.md  app.py  go.mod  main.go  requirements.txt
api/: main.py
cmd/peup/: main.go
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/types/: project.ts  proto.ts
internal/intent_agent/: config.go  intent.go  pandora.go
manifestos/: exemplo_readme.protobuf  index.proto  indexer.proto  readme.proto  repositories.csv
models/: intent.py
proto/: manifest.proto  peup.proto
server/: peup_server.go
services/: fetch_manifest.py  intent_parser.py  manifest_service.go
services/intent_service/: Cargo.toml
services/intent_service/src/: lib.rs
