[package]
name = "intent_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
transformers = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
tonic = "0.9"
prost = "0.11"

[build-dependencies]
tonic-build = "0.9"